avoid text wrap for price in item detail page

--- a/frontend-MELI/styles/components/itemDetail.module.scss
+++ b/frontend-MELI/styles/components/itemDetail.module.scss
@@ -49,6 +49,7 @@
         font-size: 46px;
         display: flex;
         align-items: flex-start;
+        text-wrap: nowrap;
 
         span {
             font-size: 25px;
